# fauplotstyle

./: README.md  __init__.py  pyproject.toml  styler.py
src/fauplotstyle/: __init__.py  saver.py  styler.py
src/fauplotstyle/styles/: default_new_style.mplstyle
src/fauplotstyle/tests/: test_plots_styles.py
styles/: default_new_style.mplstyle
tests/: test_plots_styles.py
